--- a/test.html
+++ b/test.html
@@ -5,5 +5,11 @@
     <p style="color: red">I am red</p>
     <p style="color: blue">I am blue</p>
     <p style="font-size: 50px">I am big</p>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
   </body>
 </html>
